:bug: fix major smartphone layout bugs

--- a/src/style/MainComponent.scss
+++ b/src/style/MainComponent.scss
@@ -72,7 +72,7 @@
         .graphic {
             margin: 0 20px;
             flex-basis: 25%;
-            position: sticky;
+            position: relative;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
